Fix gap between image and button and update shadows

--- a/style.css
+++ b/style.css
@@ -45,12 +45,21 @@ body {
     max-width: 250px;
     background-color: transparent;
     border: none;
-    
+    border-radius: 10px;
+    line-height: 0;
+}
+
+button {
+    box-shadow: 0px 0px 10px 1px #c9c9c9;
+    padding: 0;
+    margin: 0;
 }
 
 img {
     width: 100%;
     border-radius: 10px;
+    position: relative;
+    margin: auto;
 }
 
 .computer, .winner, .game-over {
@@ -78,4 +87,5 @@ img {
     border: none;
     font-size: 18px;
     font-family: 'Courier New', Courier, monospace;
+    padding: 8px;
 }
